--- a/templates/thread.html
+++ b/templates/thread.html
@@ -19,11 +19,14 @@
         <a href="{{ url_for('Index.home') }}" class="px-2" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Home</a>
     </nav>
     <main class="d-flex w-100 flex-column align-items-center" style="height: fit-content;">
-        <div class="chan-title d-flex border-bottom border-black fw-bold align-items-center align-content-center justify-content-start gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, #1827209c, transparent); margin-bottom: 1rem;">
-            <p class="text-success m-0 text-ellipsis">/{{ thread.board.id }}</p>
-            <p class="m-0" style="height: fit-content; font-size: 2.5rem;">-</p>
-            <p class="m-0" style="height: fit-content; font-size: 2.5rem;">{{ thread.board.name }}: </p>
-            <p class="m-0 px-1 text-white fw-light fst-italic font-monospace" style="height: fit-content; font-size: 1.2rem; background-color: rgba(0, 0, 0, 0.2); margin-top: 0.5rem !important;">Thread No.{{ thread.id }}</p>
+        <div class="chan-title d-flex justify-content-between border-bottom border-black fw-bold align-items-center align-content-center gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, #1827209c, transparent); margin-bottom: 1rem;">
+            <div class="d-flex align-items-center align-content-center justify-content-start gap-3">
+                <p class="text-success m-0 text-ellipsis">/{{ thread.board.id }}</p>
+                <p class="m-0" style="height: fit-content; font-size: 2.5rem;">-</p>
+                <p class="m-0" style="height: fit-content; font-size: 2.5rem;">{{ thread.board.name }}: </p>
+                <p class="m-0 px-1 text-white text-ellipsis fw-light fst-italic font-monospace" style="height: fit-content; font-size: 1.2rem; background-color: rgba(0, 0, 0, 0.2); margin-top: 0.5rem !important;">Thread No.{{ thread.id }}</p>
+            </div>
+            <p class="text-white-50 text-ellipsis m-0" style="font-size: 0.7rem;">{{ thread.board.description }}</p>
         </div>
 
         <!-- New reply modal -->
@@ -133,6 +136,7 @@
                         <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
                         <a style="font-size: 0.7rem;" class="m-0 text-ellipsis" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
                     </div>
+                    <p style="font-size: 0.7rem; color: #696969;" class="m-0 p-0">({{ (thread.image.size|int / 1024)|int }}KB {{ thread.image.measures }})</p>                    
                 </div>
                 <div class="d-flex flex-column gap-1 w-100">
                     
