--- a/static/css/board.css
+++ b/static/css/board.css
@@ -103,6 +103,7 @@
 
 .text-ellipsis {
     white-space: nowrap;        /* Prevents text from wrapping to a new line */
+    overflow: hidden;
     text-overflow: ellipsis;    /* Adds an ellipsis (...) at the end of the truncated text */
   }
   
