--- a/static/css/board.css
+++ b/static/css/board.css
@@ -106,4 +106,10 @@
     overflow: hidden;
     text-overflow: ellipsis;    /* Adds an ellipsis (...) at the end of the truncated text */
   }
+
+.voted{
+    background-color: rgba(0, 255, 149, 0.35) !important;
+    box-shadow:inset 0px 0px 0px 1px rgba(0, 255, 149, 0.9);
+    border-radius: 2px !important;
+}
   
