--- a/templates/board.html
+++ b/templates/board.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/board.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <title>πchan - /{{ board.id }}</title>
 </head>
 <body class="chan-bg vh-100 d-flex flex-column align-items-center">
@@ -89,7 +90,7 @@
         <hr class="border-white w-100 my-0" style="margin-bottom: 1rem !important;">
   
         <!-- Rendering Threads and Replies -->
-        <section class="d-flex flex-column align-items-start w-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
+        <section class="d-flex flex-column overflow-scroll align-items-start w-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
             
             {% macro count_replies(replies, c=namespace(value=0)) %}
                 
