--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <title>πchan</title>
 </head>
-<body class="chan-bg vh-100 d-flex flex-column align-items-center">
-    <nav class="chan-nav d-flex w-100 border-bottom">
-        <ul class="d-flex justify-content-between m-auto w-100 px-3 list-unstyled">
-            <div class="d-flex gap-4">
-                <li class="text-white">Início</li>
-                <li class="text-white">Boards</li>    
-            </div>
-            <li class="text-white">Configurações</li>
-        </ul>
-    </nav>
-    <main class="d-flex px-3 w-100 h-100 flex-column align-items-center py-3">
+<body class="chan-bg d-flex flex-column align-items-center" style="height: fit-content;">
+    
+    <main class="d-flex px-3 w-100 flex-column align-items-center py-3" style="height: fit-content;">
         <h1 class="chan-title d-flex"><p class="text-success fst-italic">π</p>chan</h1>
 
-        <h2 class="fst-italic text-white w-100 m-0" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace;">Boards:</h2>
-        <section class="d-flex w-100 border py-1 px-2 gap-3" id="boards" style="max-width: 800px;">
+        <h2 class="d-flex align-items-center fst-italic text-white w-100 m-0" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Boards:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
+        <section class="chan-index-section" id="boards">
             {% for board_group in board_groups %}
                 <div class="d-flex flex-column" id="{{ board_group.id }}">
-                    <h3 class="chan-title bg-dark text-decoration-underline m-0 px-1" style="font-size: 17px; width: fit-content;">{{ board_group.name }}:</h3>
+                    <h3 class="chan-title text-decoration-underline m-0 px-1" style="font-size: 17px; width: fit-content; background-color: rgba(0, 0, 0, 0.25);">{{ board_group.name }}:</h3>
                     
                     {% for board in board_group.boards %}
                         <a 
@@ -39,14 +32,43 @@
             {% endfor %}
         </section>
 
-        <h2 class="fst-italic text-white w-100 m-0 mt-4" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace;">Popular Threads:</h2>
-        <section class="w-100 border py-1 px-2" id="popular-threads" style="height: 100px; max-width: 800px;">
-            <!-- popular threads from the API -->
+        <h2 class="d-flex align-items-center fst-italic text-white w-100 m-0 mt-4" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Popular Threads:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
+        <section class="chan-index-section justify-content-around" id="popular-threads">
+            <div class="chan-threads-container">
+                {% for board in boards %}
+                    <div class="d-flex flex-column align-items-center" style="max-width: 175px; max-height: 275px;">
+                        <p class="chan-title text-decoration-underline fw-bold m-0 py-1" style="font-size: 0.9rem;">{{ board.name }}</p>
+        
+                        {% set ns = namespace(most_voted_thread = None, max_votes = 0) %}
+        
+                        {% for thread in board.threads %}
+                            {% set total_votes = thread.votes.all() | length %}
+                            
+                            {% if total_votes > ns.max_votes %}
+                                {% set ns.most_voted_thread = thread %}
+                                {% set ns.max_votes = total_votes %}
+                            {% endif %}
+                        {% endfor %}
+        
+                        {% if ns.most_voted_thread %}
+                            <img style="max-width: 150px; max-height: 150px; border: 1px solid rgb(66, 212, 144);" src="{{ url_for('Images.Image', id=ns.most_voted_thread.image.id) }}" alt="">
+                            <p class="ellipsis-multiline text-white">
+                                {{ ns.most_voted_thread.content }}
+                            </p>
+                        {% else %}
+                            <p>No threads with votes.</p>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
         </section>
+        
 
-        <h2 class="fst-italic text-white w-100 m-0 mt-4" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace;">Statistics:</h2>
-        <section class="w-100 border py-1 px-2" id="popular-threads" style="height: 100px; max-width: 800px;">
-            <!-- Statistics from the API -->
+        <h2 class="d-flex align-items-center text-white w-100 m-0 mt-4" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Statistics:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
+        <section class="chan-index-section flex-wrap align-items-center justify-content-around py-3" id="statistics">
+            <div class="d-flex gap-1 text-white fw-bold px-1" style="background-color: rgba(0, 0, 0, 0.25);">Total Threads: <p class="fw-normal m-0">{{ threads|length }}</p></div>
+            <div class="d-flex gap-1 text-white fw-bold px-1" style="background-color: rgba(0, 0, 0, 0.25);">Total Replies: <p class="fw-normal m-0">{{ replies|length }}</p></div>
+            <div class="d-flex gap-1 text-white fw-bold px-1" style="background-color: rgba(0, 0, 0, 0.25);">Active Content: <p class="fw-normal m-0">{{ ((images | map(attribute='size') | sum) / 1024)|int }} KB</p></div>
         </section>
     </main>
 
